syntax = "proto3";
//option java_package = "com.czy.chatSys.websocket.model";
//option java_multiple_files = true;
option java_outer_classname="RequestBodyProto";

message RequestBody {
  int64 senderId = 1;          // 发送者ID
  int64 receiverId = 2;        // 接收者ID
  string type = 3;               // 消息类型 （登录注册，文本消息，上传文本资源消息[图片，语音，视频，文件]）
  map<string,string> data = 4;  // 文本内容或文件描述
  int64 timestamp = 5;          // 时间戳
//  string urlPath = 6;           // 返回给前端调用的路由
}

/**
 * 介绍：protobuf是一种语言无关、平台无关、可扩展的高效序列化结构（比JSON更高效）
 * 使用方法：
 * 1.导入protobuf坐标，注意版本：protobuf-java；version：3.22.0（3.21.5会出现错误）
 * 2.跳转到所在目录：cd D:\CodeLearning\smart-medicine\spring-server\base\netty-socket\proto
 * 3.生成java文件：protoc --java_out=. RequestBody.proto
 * 4.使用protobuf生成的ChatMessageProto类
 */